<resources>
    <string name="app_name">JustJava</string>
    <string name="name_hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="email_subject">JustJava order for </string>
    <string name="order_summary_format">Name: %1$s\nAdd whipped cream? %2$b\nAdd chocolate? %3$b\nTotal: %4$s\nThank you!</string>
    <string name="max_coffees">You cannot have more than 300 cups of coffee</string>
    <string name="min_coffees">You cannot have less than 0 cups of coffee</string>
</resources>
